Design fix for overflow y

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -4,19 +4,21 @@ html {
   position: relative;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body,
 #root {
-  font-family: "Poppins", sans-serif;
-  color: #2f2d38;
-  overflow-x: hidden;
-  margin: 0px;
-  position: relative;
-  min-height: 100vh;
-  // background-color: #d9def2;
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center; */
+  align-items: stretch;
+  min-height: 100vh;
+  font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
+  position: relative;
 }
 
 button,
