--- a/client/src/utils/PrivateRoutes/PrivateRoutes.scss
+++ b/client/src/utils/PrivateRoutes/PrivateRoutes.scss
@@ -1,9 +1,9 @@
 main.private-content {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
   align-items: center;
   justify-content: stretch;
-
   background-color: #d9def2;
 
   .container {
@@ -15,6 +15,11 @@ main.private-content {
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+
+    .profileLeft,
+    .homeRight {
+      flex: 0 0 20rem;
+    }
 
     & > div:nth-child(2) {
       flex-grow: 1;
